--- a/Antler_Services/package.json
+++ b/Antler_Services/package.json
@@ -1,17 +1,20 @@
 {
   "name": "antler_services",
   "version": "1.0.0",
-  "main": "AdminFunctions.js",
+  "description": "services",
+  "main": "services.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node services.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "formidable": "^1.2.1",
+    "fs": "0.0.1-security",
     "mysql": "^2.16.0",
+    "path": "^0.12.7",
     "request": "^2.88.0"
   }
 }
