--- a/Antler_WebApp/antler-webapp/package.json
+++ b/Antler_WebApp/antler-webapp/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
-    "vue": "^2.6.6"
+    "vue": "^2.6.9",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
