--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-/Antler_Services/images
-/Antler_Services/node_modules
+node_modules/
+
+
+# Editor directories and files
+.idea
+.vscode
+.vs
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
