--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "fs": "0.0.1-security",
     "mysql": "^2.16.0",
     "path": "^0.12.7",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   }
 }
