Added image duration service, image rename service, and now socket sends duration to the device too

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "services",
   "main": "services.js",
   "scripts": {
-    "start": "node services.js & node socket.js"
+    "start": "node services.js"
   },
   "author": "",
   "license": "ISC",
