--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "diskusage": "^1.0.0",
     "express": "^4.16.4",
     "formidable": "^1.2.1",
     "fs": "0.0.1-security",
